workloads/must-gather.local.2378005887078000116/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-07d359641e4827bc34e31a5cefaf986acf4e78064fef531124cac0ed6da3e94c/namespaces/openshift-console/route.openshift.io/routes.yaml
---
apiVersion: route.openshift.io/v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-01-09T04:46:25Z"
    labels:
      app: console
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:app: {}
        f:spec:
          f:host: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: console
      operation: Update
      time: "2023-01-09T04:46:25Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2023-01-09T04:46:25Z"
    name: console
    namespace: openshift-console
    resourceVersion: "18563"
    uid: 4bb3b718-3469-490f-bb97-65393c615787
  spec:
    host: console-openshift-console.apps.sn-loggvls-jsm.qe.devcluster.openshift.com
    port:
      targetPort: https
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: console
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-01-09T04:46:25Z"
        status: "True"
        type: Admitted
      host: console-openshift-console.apps.sn-loggvls-jsm.qe.devcluster.openshift.com
      routerCanonicalHostname: router-default.apps.sn-loggvls-jsm.qe.devcluster.openshift.com
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-01-09T04:46:25Z"
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:host: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: console
      operation: Update
      time: "2023-01-09T04:46:25Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2023-01-09T04:46:25Z"
    name: downloads
    namespace: openshift-console
    resourceVersion: "18550"
    uid: 67909257-bc19-4f25-911e-80e3bbb5623a
  spec:
    host: downloads-openshift-console.apps.sn-loggvls-jsm.qe.devcluster.openshift.com
    port:
      targetPort: http
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: downloads
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-01-09T04:46:25Z"
        status: "True"
        type: Admitted
      host: downloads-openshift-console.apps.sn-loggvls-jsm.qe.devcluster.openshift.com
      routerCanonicalHostname: router-default.apps.sn-loggvls-jsm.qe.devcluster.openshift.com
      routerName: default
      wildcardPolicy: None
kind: RouteList
metadata:
  resourceVersion: "268372"
